--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <div id="root">
-    <!-- <h1>hklkk</h1> -->
+    <h1>React js tutorial</h1>
+</div>
+<div id="root2">
+    <h1>React js app root2</h1>
 </div>
 <script
     type="module" src="./App.js"></script>
