seperated App.js

--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
     <h1>React js app root2</h1>
 </div>
 <script
-    type="module" src="./App.js"></script>
+    type="module" src="/src/App.js"></script>
 </body>
 </html>
