--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <div id="root">
     <h1>React js tutorial</h1>
 </div>
-<div id="root2">
+<!-- <div id="root2">
     <h1>React js app root2</h1>
-</div>
+</div> -->
 <script
     type="module" src="./App.js"></script>
 </body>
